<resources>

    <string name="app_name">เวลาหน้าจอ</string>

    <string name="stats_select_dates">Select start and end date</string>
    <string name="from">from</string>
    <string name="to">to</string>

    <!-- new set string -->
    <string name="eye_app_name">Eye-Health</string>

    <!--text for sign in page-->
    <string name="eye_hint_email">อีเมล์</string>
    <string name="eye_hint_password">รหัสผ่าน</string>
    <string name="eye_button_signIn">เข้าสู่ระบบ</string>
    <string name="eye_button_register">ลงทะเบียน</string>
    <string name="eye_button_guest">ข้ามขั้นตอนการลงทะเบียน</string>

    <!-- Sign in error message -->
    <string name="eye_error_password_more_length">รหัสผ่านต้องกรอกอย่างน้อย 8 ตัวอักษร</string>
    <string name="eye_error_not_enter_email">กรุณากรอกอีเมล์</string>
    <string name="eye_error_not_match_email">กรุณากรอกอีเมล์ให้ถูกต้องตามตัวอย่าง Exam@exam.com</string>
    <string name="eye_error_not_enter_password">กรุณากรอกรหัสผ่าน</string>
    <string name="eye_error_password_less">กรุณากรอกรหัสอย่างน้อย 8 ตัวอักษร และไม่เกิน 12 อักษร</string>


    <!-- text for Sign up page -->
    <string name="eye_sign_up_name">ลงทะเบียนผู้ใช้งาน</string>
    <string name="eye_hint_name">ชื่อ</string>
    <string name="eye_hint_surname">นามสกุล</string>
    <string name="eye_hint_email_sign_up">อีเมล์ (Exam@exam.com)</string>
    <string name="eye_hint_password_sign_up">รหัสผ่าน (A-Z,0-9)</string>
    <string name="eye_hint_re_enter_password">ยินยันรหัสผ่าน</string>
    <string name="eye_button_cancal">ยกเลิก</string>
    <string name="eye_button_link_to_sign_in">กลับไปยังหน้าต่างเข้าสู่ระบบ</string>

    <!-- Sign up error message -->
    <string name="eye_error_not_enter_name">กรุณากรอกชื่อ</string>
    <string name="eye_error_not_enter_surname">กรุณากรอกนามสกุล</string>
    <string name="eye_error_not_enter_pass">กรุณากรอกรหัสผ่าน</string>
    <string name="eye_error_not_enter_re_pass">กรุณากรอกรหัสยืนยัน</string>
    <string name="eye_error_not_enter_re_pass_notmatch">รหัสการยืนยันไม่ตรงกันโปรดตรวจสอบอีกครั้ง</string>

    <!--Guest menu-->
    <string name="eye_guest_name">ตรวจสอบข้อมูลการดูแลสุขภาพตา</string>
    <string name="eye_guest_title1">ความรู้เกี่ยวกับโรคตา</string>
    <string name="eye_guest_title2">ความรู้เกี่ยวกับการรับประทานอาหาร</string>
    <string name="eye_sign_knowledge_name">ข้อมูลเกล็ดความรู้</string>
    <string name="eye_detail_knowledge">เนื้อหาเพิ่มเติม</string>
    <string name="eye_guest_action">หน้าจอสำหรับผู้ใช้งานทั่วไป</string>


    <!--Time menu-->
    <string name="top_menu_share">แชร์</string>


    <!--All menu config-->
    <string name="menu_search">ค้นหา</string>
    <string name="action_settings">ตั้งค่า</string>
    <string name="installed_menu_search_hint">กรอกชื่อแอปพลิเคชันที่ต้องการค้นหา</string>
    <string name="menu_select_period">เลือกแสดงการใช้งานแอปพลิเคชัน</string>
    <string name="stats_day">วันนี้</string>
    <string name="stats_yesterday">เมื่อวาน</string>
    <string name="stats_week">สัปดาห์</string>
    <string name="stats_year">เดือน</string>
    <string name="nav_screen">ตรวจจับเวลาหน้าจอ</string>
    <string name="nav_menu">เมนู</string>
    <string name="nav_eye">ประเมินผลกระทบสุขภาพตา</string>
    <string name="nav_intro">การดูแลสุขภาพตา</string>
    <string name="know_id">เกร็ดความรู้การดูแลสุขภาพตา</string>
    <string name="nav_mor">เพิ่มเติม</string>

    <string name="btn_logout">ออกจากระบบ</string>
    <string name="installed_include_system">แอปพลิเคชันที่มีอยู่ในระบบ</string>
    <string name="top_head">5 อันดับสูงสุดในการใช้งานแอปพลิเคชันของสัปดาห์นี้</string>

    <string name="tab_top">การใช้งานสูงสุด</string>
    <string name="tab_stats">ตรวจจับเวลาหน้าจอ</string>
    <string name="tab_installed">อนุญาติการตรวจจับ</string>

    <string name="choose_action">กรุณาเลือก</string>
    <string name="launch">เปิด</string>
    <string name="details">รายละเอียด</string>
    <string name="system_menu">ข้อมูลระบบ</string>
    <string name="uninstall">ถอนการติดตั้ง</string>

    <string name="top_share_header">5 อันดับแรกของแอปพลิเคชั่นที่ใช้งานมากที่สุด:\n</string>
    <string name="enable_usage_permission">เปิดใช้สิทธิ์สำหรับ Eye Health แล้วกด back</string>
    <string name="installed_spinner_sort">เรียงตาม</string>
    <string name="top_time">เวลาที่ใช้งาน</string>
    <string name="installed_cannot_be_launched">ไม่สามารถเปิดแอ็พพลิเคชันได้</string>

    <string name="hours">h</string>
    <string name="minutes">min</string>
    <string name="seconds">sec</string>


    <string name="nav_noti">ข้อมูลการแจ้งเตือน</string>
    <string name="nav_das">ข้อมูลความรู้</string>
    <string name="nav_signIn">ลงชื่อเข้าใช้งาน</string>
    <string name="nav_signUp">ลงทะเบียนผู้ใช้งาน</string>

    <!-- impact-->
    <string name="eye_sign_impact">ประเมินผลกระทบ</string>
    <string name="eye_setting">การจัดการเพิ่มเติม</string>

    <!--more menu-->
    <string name="eye_profile_menu">โปรไฟล์</string>

    <!--preferenceScreen-->
    <string name="pref_title_notifications">จัดการการแจ้งเเตือน</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="title_new_notification_sound">การแจ้งเตือนข้อความใหม่</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="summary_choose_ringtone">กรุณาเลือกเสียงการแจ้งเตือน</string>
    <string name="pref_title_ringtone">เสียงแจ้งเตือน</string>
    <string name="pref_ringtone_silent">ไม่ใช้เสียง</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="summary_vibrate">แจ้งเตือนข้อความใหม่ด้วยการสั่น</string>
    <string name="title_vibrate">การสั่น</string>
    <string name="pref_header_about">เกี่ยวกับ</string>
    <string name="summary_about">แอปพลิเคชัน Eye-Health ได้ถูกพัฒนาขึ้นโดยนายปราณีต กลั่นบุญ และนายสรายุตร พูลผล โดยมีอาจารย์ปิติพัฒน์ เจิมบุญธนะพงศ์ เป็นที่ปรึกษางานวิจัยนี้</string>
    <string name="app_version">1.2.2</string>
    <string name="summary_support">มีข้อสงสัยหรือไม่? เรายินดีที่จะช่วยเหลือ!</string>
    <string name="title_send_feedback">ส่งความคิดเห็น</string>
    <string name="title_version">เวอร์ชัน</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_activity_settings">Settings</string>

</resources>
