<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_dasboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_das"
        android:tooltipText="bold"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_signIn"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_signIn"
        android:tooltipText="bold"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_signUp"
        android:icon="@drawable/ic_person_add"
        android:title="@string/nav_signUp"
        android:tooltipText="bold"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

</menu>
