<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:gravity="center"
    android:padding="2dp"
    android:scrollbars="none"
    tools:context=".MenuActivity"
    tools:showIn="@layout/eye_menu_activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="EYE HEALTH MENU"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="32sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title1">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:columnCount="1">

                    <LinearLayout
                        android:id="@+id/button_screen"
                        style="@style/HomeItemLayoutStyle1"
                        android:layout_width="325dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_home_item_1">

                        <ImageView
                            style="@style/HomeItemImageStyle"
                            android:src="@drawable/screen_time_pic" />

                        <TextView
                            style="@style/HomeItemLabelStyle"
                            android:text="@string/nav_screen"
                            android:textStyle="bold" />
                    </LinearLayout>
                </GridLayout>

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:columnCount="2">

                    <LinearLayout
                        android:id="@+id/button_new"
                        style="@style/HomeItemLayoutStyle"
                        android:layout_width="162dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_home_item_3">

                        <ImageView
                            style="@style/HomeItemImageStyle"
                            android:layout_height="70dp"
                            android:src="@drawable/intro_pic" />

                        <TextView
                            style="@style/HomeItemLabelStyle"
                            android:text="@string/know_id"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/button_notification"
                        style="@style/HomeItemLayoutStyle"
                        android:layout_width="162dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_home_item_4">

                        <ImageView
                            style="@style/HomeItemImageStyle"
                            android:layout_width="93dp"
                            android:layout_height="92dp"
                            android:src="@drawable/ic_message" />

                        <TextView
                            style="@style/HomeItemLabelStyle"
                            android:text="@string/nav_noti"
                            android:textStyle="bold" />
                    </LinearLayout>

                </GridLayout>

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:columnCount="1">

                    <LinearLayout
                        android:id="@+id/button_management"
                        style="@style/HomeItemLayoutStyle1"
                        android:layout_width="325dp"
                        android:background="@drawable/shape_home_item_2"
                        android:layout_row="0"
                        android:layout_column="0">

                        <ImageView
                            style="@style/HomeItemImageStyle"
                            android:layout_width="151dp"
                            android:layout_height="107dp"
                            android:src="@drawable/eye_pic" />

                        <TextView
                            style="@style/HomeItemLabelStyle"
                            android:text="@string/nav_eye"
                            android:textStyle="bold" />
                    </LinearLayout>
                </GridLayout>

            </GridLayout>

        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>
