<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".guestMenu.GuestSignInFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp">

            <ImageView
                android:layout_width="161dp"
                android:layout_height="167dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/family" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:text="ลงชื่อเข้าใช้งาน"
                android:textAppearance="@style/TextAppearance.eyeHealth.Title" />

            <android.support.design.card.MaterialCardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/signPageBackgroundColor"
                    android:padding="16dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/email_text_input"
                        style="@style/Widget.eyeHealth.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/eye_hint_email">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/email_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:singleLine="true"
                            android:maxLength="30"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/password_text_input"
                        style="@style/Widget.eyeHealth.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/eye_hint_password">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/password_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="12"
                            android:singleLine="true"
                            android:inputType="textPassword" />
                    </android.support.design.widget.TextInputLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.button.MaterialButton
                            android:id="@+id/sign_in_button"
                            style="@style/Widget.eyeHealth.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:text="@string/eye_button_signIn" />

                    </RelativeLayout>

                </LinearLayout>
            </android.support.design.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

</FrameLayout>